--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Stylish Music Player</title>
+        <title>Stylish Realtime Clock</title>
         <meta name="author" content="Wafa Rifqi Anafin">
         <meta property="og:type" content="website"/>
         <meta
             name="description"
             content="Real time clock, clock, html5 clock, html clock, html jam, html5 jam, bikin jam, bikin web jam">
-        <meta property="og:title" content="Premium and High Design Music Player"/>
-        <meta property="og:description" content="Pemutar Musik Design Premium"/>
+        <meta property="og:title" content="Stylish Realtime Clock"/>
+        <meta property="og:description" content="Stylish Realtime Clock"/>
         <meta property="og:image" content="https://wafarifki.me/hai.jpeg"/>
         <meta name="description" content="Premium and High Design Real-time Clock"/>
         <link rel="shortcut icon" href="favicon.png"/>
