Update the tick sound effect 2021

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     </div>
 
                                     <audio
-                                        src="https://sampleswap.org/samples-ghost/DRUMS%20and%20SINGLE%20HITS/snares/5[kb]sidestick.aif.mp3"
+                                        src="https://www.soundjay.com/clock/clock-ticking-3.mp3"
                                         class="audio"></audio>
                                 </center>
                             </div>
